--- a/menu.html
+++ b/menu.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="menuEstilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 </head>
+<header>
+    <h1>Menu</h1>
+</header>
 <body>
-    <h1 class="titulo">Menu</h1>
-    <h2 onclick="window.location.href='../Loja/loja.html'" > Loja </h2>
-    <h2 onclick="window.location.href='..Carrinho/carrinho.html'"> Carrinho </h2> 
+    
+    <div class="linkClick">
+        <h2 onclick="window.location.href='../Loja/loja.html'" > Loja </h2>
+        <h2 onclick="window.location.href='..Carrinho/carrinho.html'" > Carrinho </h2> 
+    </div>
 </body>
 </html>
