--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,8 @@
 <body>
     
     <div class="linkClick">
-        <h2 onclick="window.location.href='../Loja/loja.html'" > Loja </h2>
-        <h2 onclick="window.location.href='..Carrinho/carrinho.html'" > Carrinho </h2> 
+        <h2 onclick="window.location.href='loja.html'" > Loja </h2>
+        <h2 onclick="window.location.href='carrinho.html'" > Carrinho </h2> 
     </div>
 </body>
 </html>
