--- a/loja.html
+++ b/loja.html
@@ -17,6 +17,8 @@
             <div class="card-body">
               <h5 class="card-title">Funko Pop! Tupac</h5>
               <p class="card-text">Boneco de vinil representando a lenda do hip hop Tupac.</p>
+              <br>
+              <p>R$200,00</p>
               <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
         </div>
@@ -25,6 +27,8 @@
             <div class="card-body">
               <h5 class="card-title">Espada de diamante Minecraft</h5>
               <p class="card-text">Repersentação de plástico da iconica espada de diamante do aclamado videojogo Minecraft.</p>
+              <br>
+              <p>R$50,00</p>
               <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
         </div>
@@ -33,23 +37,29 @@
             <div class="card-body">
               <h5 class="card-title">Headphone de gatinho RGB</h5>
               <p class="card-text">Headphone para machos apenas (alphas).</p>
+              <br>
+              <p>R$2000,00</p>
               <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">"Colar" para melhorar desempenho em jogos mentais</h5>
+              <p class="card-text">Famoso por ter sido usado por Hans Niemann.</p>
+              <br>
+              <p>R$20,00</p>
+              <a href="#" class="btn btn-primary">Adicionar no carrinho</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Edição de colecionador de Fallout: Brotherhood of Steel</h5>
+              <p class="card-text">Edição de luxo do aclamado jogo Fallout: Brotherhood of Steel, com alguns extras.</p>
+              <br>
+              <p>R$5000,00</p>
+              <a href="#" class="btn btn-primary">Adicionar no carrinho</a>
             </div>
         </div>
     </div>
